# BYU_CS_236_PROJECT

./: Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.cpp  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MatcherAutomaton.cpp  MatcherAutomaton.h  MyTest2.txt  Parameter.h  Parser.cpp  Parser.h  Predicate.h  Relation.cpp  Relation.h  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  UndefinedBlockCommentAutomaton.cpp  UndefinedBlockCommentAutomaton.h  UndefinedStringAutomaton.cpp  (+2 more)
